--- a/index.html
+++ b/index.html
@@ -1,54 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="" xmlns="">
-<head>
-    <style>
-
-
-
-
-.button {
-  border: none;
-  color: white;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-}
-
-.button1 {
-  background-color: white;
-  color: black;
-  border: 2px solid #4CAF50;
-}
-
-.button1:hover {
-  background-color: #4CAF50;
-  color: white;
-}
-
-.button2 {
-  background-color: white;
-  color: black;
-  border: 2px solid #008CBA;
-}
-
-.button2:hover {
-  background-color: #008CBA;
-  color: white;
-}
-
-
-</style>
+<head<a href="default.asp">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHvoB1r6kxjY80CD4tNQkLDdLPsuElyZrMdw&usqp=CAU" alt="HTML tutorial" style="width:200px;height:200px;">
+    " Technology is a blessing – but it can also be a curse."</a>
     <meta charset="UTF-8">
     <title> Welcome to AaShiQuE's World</title>
 </head>
-<h1 style="background-color:DodgerBlue;"> Hello Everyone  , welcome to Aashique's world</h1>
+<h1 style="background-color:Tomato;" > Hello world !! Welcome to Aashique's World</h1>
 
-<img src="RE4wpp2.jpg" width="500px" height="500px" >
+
 
 
 <p style="background-color:Tomato;">This is my first website,work with html,css and java script is kind of unknown to me.
@@ -65,7 +25,7 @@
 
 <style>
 body {
-  background-image: url('download.jpg');
+  background-image: url('https://cdn5.vectorstock.com/i/1000x1000/39/24/white-blue-technology-background-vector-20643924.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
@@ -75,24 +35,23 @@ body {
 <h2>Login</h2>
 
 <form>
-    <label for="fname">First name:</label><br>
-    <input type="text" id="fname" name="fname" value="Username"><br>
-    <label for="lname">Last name:</label><br>
-    <input type="text" id="lname" name="lname" value="Password">
+    <label for="fname">ID::</label><br>
+    <input type="text" id="fname" name="fname" value=""><br>
+    <label for="lname">Pass word::</label><br>
+    <input type="text" id="lname" name="lname" value="">
 </form>
 
-<h3>Personal info:</h3>
+<h3>Or Registration:</h3>
 
 <form action="/action_page.php">
-    <label for="name"> name</label><br>
-    <input type="text" id="name" name="name" value="Name"><br>
-    <label for="contact">Contact info</label><br>
-    <input type="text" id="contact" name="Contact" value="Phone number"><br><br>
+    <label for="name"> First And Last Name</label><br>
+    <input type="text" id="name" name="name" value=""><br>
+    <label for="contact">Phone Number</label><br>
+    <input type="text" id="contact" name="Contact" value=""><br><br>
     <label for="Email">Email id</label><br>
-    <input type="text" id="Email" name="email" value="Email"><br>
+    <input type="text" id="Email" name="email" value=""><br>
     <label for="Country">Country</label><br>
-    <input type="text" id="Country" name="Country" value="country"><br>
-    <input type="submit" value="Submit">
+    <input type="text" id="Country" name="Country" value=""><br>
 </form>
 
 <label for="Gender">Choose a Gender:</label>
@@ -102,11 +61,8 @@ body {
     <option value="Female">Female</option>
     <option value="Others">Others</option>
     </select>
-
-
-    <h4>Skills</h4>
-
-    <form action="/action_page.php">
+<h4>Skills</h4>
+<form action="/action_page.php">
         <input type="checkbox" id="Programming" name="Programming" value="Programming">
         <label for="Programming"> I have a skills of Programming </label><br>
         <input type="checkbox" id="" name="QAAQ" value="QAAQ">
@@ -126,13 +82,12 @@ body {
       <input type="radio" id="Christianity" name="fav_Religion" value="Christianity">
       <label for="Christianity">Christianity</label><br>
       <input type="radio" id="Islam" name="fav_Religion" value="Islam">
-      <label for="Islam">Islam</label>
-
+      <label for="Islam">Islam</label >
       <input type="radio" id="Hinduism" name="fav_Religion" value="Hinduism">
       <label for="Hinduism">Hinduism</label><br>
       <input id=" Others " name="fav_Religion" type="radio" value="Others">
       <label for="Others">Others</label>
-
+    <input type="submit" value="Submit">
 </form>
 
 <p>A simple example of a Qa classes videos below </p>
